objects/LLC_BI__Account_Covenant__c.object
<CustomObject>
    <description>This is the junction object between Covenants and Accounts.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>This field is required. It is manually populated within the Covenant Management app. It identifies the relationship associated with the Account Covenant record and is automatically populated when creating a new record from an existing relationship.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Account_Covenants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually populated. It identifies the contact associated with the Account Covenant record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Covenants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant2__c</fullName>
        <description>This field is required and is automatically populated. It identifies the Covenant Mgmt record associated with the Account Covenant record and is automatically populated when creating a new Account Covenant.</description>
        <label>Covenant</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Account_Covenants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Covenant</label>
    <nameField>
        <displayFormat>COV-{0000}</displayFormat>
        <label>Covenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>